<resources>
    <string name="app_name">Pocket_Library_List</string>
    <string name="action_settings">Settings</string>

    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <!-- Strings for splashscreen and log-in screen -->
    <string name="welcome">Welcome</string>
    <string name="logo_description">Applications logo</string>
    <string name="log_in_text">Please log in using your google account!</string>
    <string name="log_out">Log out</string>

    <!-- Strings for Main menu -->
    <string name="bookshelf">Bookshelf</string>
    <string name="stats">Stats</string>
    <string name="add">Add</string>
    <string name="delete">Delete</string>
    <string name="categories">Categories</string>
    <string name="avatar_image_desc">End-users avatar.</string>
    <string name="welcome_text">Welcome back: </string>

    <!-- Strings for Bookshelf related activities -->
    <string name="read">Read</string>
    <string name="currently_reading">Currently Reading</string>
    <string name="to_read">To Read</string>
    <string name="book_cover_desc">This is the book cover</string>
    <string name="book_title">Title</string>
    <string name="book_author">Author</string>
    <string name="book_release_date">Release Date</string>
    <string name="book_isbn">ISBN</string>
    <string name="book_publisher">Publisher</string>

    <!-- Strings for Stats related activities -->
    <string name="your_stats">Your stats</string>
    <string name="read_books_stats">Read books:</string>
    <string name="to_read_books_stats">To read books:</string>
    <string name="curr_reading_books">Currently reading books:</string>
    <string name="read_pages">Read pages:</string>
    <string name="time_spent_reading">Time spent reading:</string>
    <string name="pages_to_read">Pages left to read:</string>
    <string name="time_needed">Time needed to read unread books:</string>

    <!-- Strings for Add related activities -->
    <string name="manual">Manual</string>
    <string name="camera">Camera</string>
    <string name="submit">Submit</string>
    <string name="scan">Scan</string>
    <string name="scan_msg">Scan your ISBN number:</string>
    <string name="insert_msg">Insert the ISBN number:</string>

    <!-- Strings for Add related activities -->
    <string name="delete_msg">Please select the bookshelf and a book to delete</string>




</resources>