<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/menu_background"
    tools:context=".SplashScreen">


    <RelativeLayout
        android:id="@+id/topImage"
        android:layout_width="match_parent"
        android:layout_height="180dp"
        android:background="@drawable/background" />

    <ImageView
        android:id="@+id/picture"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="100dp"
        android:contentDescription="@string/logo_description"
        android:src="@drawable/icon" />

    <TextView
        android:id="@+id/logInText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/picture"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="60dp"
        android:gravity="center"
        android:text="@string/log_in_text"
        android:textAlignment="center"
        android:textColor="@color/dark_purple"
        android:textSize="25sp"
        android:textStyle="italic|bold" />


    <RelativeLayout
        android:id="@+id/buttomImage"
        android:layout_width="match_parent"
        android:layout_height="180dp"
        android:layout_alignParentBottom="true"
        android:background="@drawable/background_180" />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/logInText"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:orientation="vertical">


        <com.google.android.gms.common.SignInButton
            android:id="@+id/logIn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            android:backgroundTint="@color/dark_purple" />

        <Button
            android:id="@+id/logOut"
            android:layout_width="124dp"
            android:layout_height="52dp"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            android:backgroundTint="@color/dark_purple"
            android:text="@string/log_out" />

    </LinearLayout>


</RelativeLayout>