<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/menu_background">


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="180dp"
        android:background="@drawable/background">

        <TextView
            android:id="@+id/name"
            android:layout_width="200dp"
            android:layout_height="100dp"
            android:layout_alignParentStart="true"
            android:layout_marginTop="30dp"
            android:gravity="center"
            android:shadowColor="#000000"
            android:shadowDx="4"
            android:shadowDy="4"
            android:shadowRadius="1"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:textStyle="bold|italic" />

        <androidx.cardview.widget.CardView
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="30dp"
            android:layout_marginEnd="20dp"
            android:layout_marginBottom="15dp"
            app:cardCornerRadius="70dp"
            app:cardElevation="6dp">

            <ImageView
                android:id="@+id/profilePic"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:contentDescription="@string/avatar_image_desc" />
        </androidx.cardview.widget.CardView>

    </RelativeLayout>

    <TextView
        android:id="@+id/isbnText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_centerHorizontal="true"
        android:text="@string/insert_msg"
        android:textColor="@color/dark_purple"
        android:textSize="30sp"
        android:textStyle="bold|italic" />

    <Spinner
        android:id="@+id/spinner"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/isbnText"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="70dp"
        android:gravity="center" />



    <EditText
        android:id="@+id/isbnInputField"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/isbnText"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="125dp"
        android:ems="13"
        android:inputType="number"
        android:maxLength="13"
        android:autofillHints="ISBN number"
        tools:ignore="LabelFor"/>

    <RelativeLayout
        android:id="@+id/buttomImage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/background_180"
        android:layout_below="@id/isbnInputField">

    <Button
        android:id="@+id/submitISBN"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="40dp"
        android:text="@string/submit" />
    </RelativeLayout>

</RelativeLayout>
